Implementazione e test ISC Gestione applicazioni

--- a/contracts/wasm/Cargo.toml
+++ b/contracts/wasm/Cargo.toml
@@ -54,6 +54,9 @@ members = [
 	"autorizzazioni/rs/autorizzazioni",
 	"autorizzazioni/rs/autorizzazioniimpl",
 	"autorizzazioni/rs/autorizzazioniwasm",
+	"gestioneapplicazioni/rs/gestioneapplicazioni",
+	"gestioneapplicazioni/rs/gestioneapplicazioniimpl",
+	"gestioneapplicazioni/rs/gestioneapplicazioniwasm",
 ]
 
 [profile.release]
